--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -7,10 +7,23 @@
     tools:context=".MainActivity">
 
     <ImageView
+        android:id="@+id/ImgSplashScreen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="30mm"
         android:src="@drawable/alh_launcher"
-        android:scaleType="centerInside"/>
+        android:scaleType="centerInside"
+        android:contentDescription="@string/Descripcion"/>
 
+    <TextView
+        android:id="@+id/tVWelcome"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:elegantTextHeight="true"
+        android:gravity="bottom|center"
+        android:text="Welcome!"
+        android:textColor="#000000"
+        android:textSize="36sp"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
