Añado activity del storytelling y preparo los botones para vuestros activities y modifico Welcome

--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -21,7 +21,7 @@
         android:layout_height="match_parent"
         android:elegantTextHeight="true"
         android:gravity="bottom|center"
-        android:text="Welcome!"
+        android:text="Bienvenidos!"
         android:textColor="#000000"
         android:textSize="36sp"
         tools:ignore="MissingConstraints" />
