--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,54 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@android:drawable/ic_dialog_email" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="132dp"
-        android:text="Proyecto Alhambra!"
+        android:layout_marginTop="100dp"
+        android:text="@string/button_main_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/buttonStorytelling"
-        android:layout_width="163dp"
-        android:layout_height="62dp"
-        android:backgroundTintMode="src_over"
-        android:onClick="storyTelling"
-        android:text="Storytelling"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintBottom_toTopOf="@+id/buttonWar"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <Button
         android:id="@+id/buttonPuzzle"
         android:layout_width="163dp"
         android:layout_height="63dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp"
+        android:layout_centerInParent="true"
         android:backgroundTintMode="src_over"
         android:onClick="puzzle"
-        android:text="Puzzle"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintStart_toEndOf="@+id/buttonStorytelling"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:text="@string/button_puzzle_text"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
     <Button
         android:id="@+id/buttonWar"
-        android:layout_width="164dp"
-        android:layout_height="62dp"
+        android:layout_width="163dp"
+        android:layout_height="63dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="250dp"
+        android:layout_centerInParent="true"
         android:backgroundTintMode="src_over"
         android:onClick="war"
-        android:text="Migue"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintStart_toStartOf="@+id/buttonStorytelling"
-        app:layout_constraintTop_toBottomOf="@+id/buttonPuzzle" />
+        android:text="@string/button_war_text"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/buttonStorytelling"
+        android:layout_width="163dp"
+        android:layout_height="63dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="350dp"
+        android:layout_centerInParent="true"
+        android:backgroundTintMode="src_over"
+        android:onClick="storytelling"
+        android:text="@string/button_storytelling_text"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
