--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".SplashScreenActivity">
 
     <ImageView
         android:id="@+id/ImgSplashScreen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="30mm"
+        android:layout_marginBottom="50dp"
         android:src="@drawable/alh_launcher"
         android:scaleType="centerInside"
         android:contentDescription="@string/Descripcion"/>
@@ -19,11 +19,12 @@
         android:id="@+id/tVWelcome"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="20dp"
         android:elegantTextHeight="true"
         android:gravity="bottom|center"
-        android:text="Bienvenidos!"
+        android:text="@string/welcome_message"
         android:textColor="#000000"
-        android:textSize="36sp"
+        android:textSize="38sp"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
