--- a/app/src/main/res/layout/activity_storytelling.xml
+++ b/app/src/main/res/layout/activity_storytelling.xml
@@ -11,16 +11,15 @@
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="315dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginBottom="47dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginBottom="34dp"
         android:gravity="center|center_horizontal|center_vertical"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/iView"
+        app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
         <TextView
             android:id="@+id/textView2"
@@ -44,10 +43,10 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="82dp"
         android:layout_marginEnd="60dp"
-        android:layout_marginBottom="286dp"
+        android:layout_marginBottom="61dp"
         android:gravity="center_horizontal|top"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -60,19 +59,6 @@
     </LinearLayout>
 
 
-    <ImageView
-        android:id="@+id/iView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="143dp"
-        android:layout_marginEnd="55dp"
-        android:layout_marginBottom="15dp"
-        android:src="@drawable/ic_launcher_background"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
-
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
@@ -82,7 +68,6 @@
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iView"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
