--- a/app/src/main/res/layout/activity_war.xml
+++ b/app/src/main/res/layout/activity_war.xml
@@ -6,4 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".War">
 
+
+    <TextView
+        android:id="@+id/textAcelerometro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/textAcelerometer"
+        android:textSize="85sp"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
