--- a/app/src/main/res/layout/activity_puzzle.xml
+++ b/app/src/main/res/layout/activity_puzzle.xml
@@ -16,9 +16,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:horizontalSpacing="10dp"
-        android:numColumns="3"
-        android:paddingHorizontal="10dp"
-        android:paddingVertical="10dp"
+        android:numColumns="4"
+        android:padding="10dp"
         android:verticalSpacing="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,8 +30,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:clickable="true"
         android:onClick="onImageFromCameraClick"
         android:src="@drawable/ic_photo_camera_black_24dp"
         android:tint="@android:color/white"
