--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -12,8 +12,7 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="50dp"
         android:src="@drawable/image"
-        android:scaleType="centerInside"
-        android:contentDescription="@string/Descripcion"/>
+        android:scaleType="centerInside" />
 
     <TextView
         android:id="@+id/tVWelcome"
